--- a/src/App.css
+++ b/src/App.css
@@ -204,7 +204,15 @@ button:hover {
   }
 }
 
-@media screen and (max-width: 400px) or (max-height: 50px) {
+@media screen and (max-width: 400px){
+  .xyz{
+    max-width: 100px;
+    word-wrap: break-word;
+    overflow-x: auto;
+  }
+}
+
+@media screen and (max-width: 400px) and (max-height: 50px){
   .xyz{
     max-width: 100px;
     word-wrap: break-word;
