--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,14 @@ button:hover {
   margin-left: 78%;
 }
 
+@media screen and (max-height: 10px){
+  .xyz{
+    max-width: 30px;
+    word-wrap: break-word;
+    overflow-x: auto;
+  }
+}
+
 @media screen and (max-width: 700px) {
   .xyz{
     max-width: 200px;
@@ -212,10 +220,4 @@ button:hover {
   }
 }
 
-@media screen and (max-width: 400px) and (max-height: 50px){
-  .xyz{
-    max-width: 100px;
-    word-wrap: break-word;
-    overflow-x: auto;
-  }
-}
+
