--- a/src/App.css
+++ b/src/App.css
@@ -206,3 +206,13 @@ button:hover {
     margin-left: 53%;
   }
 }
+
+@media screen and (max-width: 300px){
+  .xyz{
+    max-width: 100px;
+    word-wrap: break-word;
+    overflow-x: auto;
+  }
+}
+
+
