--- a/src/App.css
+++ b/src/App.css
@@ -175,7 +175,7 @@ button:hover {
   margin-left: 78%;
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 900px) and (min-width: 300px) {
   .xyz{
     max-width: 200px;
     word-wrap: break-word;
