--- a/src/App.css
+++ b/src/App.css
@@ -175,6 +175,12 @@ button:hover {
   margin-left: 78%;
 }
 
+.cntr2{
+  text-align: right;
+  margin-bottom: 10px;
+  margin-top:-35.5px;
+}
+
 @media screen and (max-width: 900px) and (min-width: 400px) {
   .xyz{
     max-width: 200px;
@@ -188,6 +194,14 @@ button:hover {
     width: 46.5%;
     margin-top: 30%;
     margin-left: 43%;
+  }
+  .cntr2{
+    margin-top: 5px;
+    text-align: center;
+  }
+  .cntr3{
+    margin-bottom: 10px;
+    text-align: center;
   }
 }
 
